tdf#151876 speedup editing large chart

reduces hang time when switching chart to edit mode by 50%.

PerXMinMaxCalculator does not need to build a summary data structure,
since we already walking over the data in X order.
Also switch some the intermediate data structures to more cache
friendly ones. In this case, std::map is better because we walk
the data in X order.

Change-Id: I3d291fd56becc1dfdd7d2df87d04b11f363bfd52
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183747
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins